--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         const cards = [
             { img: "https://i.imgur.com/6LOSsbt.jpeg", text: "El ser humano como centro del pensamiento", category: "Características" },
             { img: "https://i.imgur.com/keIXx3i.jpeg", text: "Estudio de los textos clásicos grecolatinos", category: "Características" },
-            { img: "https://i.imgur.com/4nZ1dZF.jpeg", text: "Defensa del individualismo y la razón", category: "Características" },
-            { img: "", text: "Maquiavelo y su obra 'El Príncipe'", category: "Literaria y filosófica" },
+            { img: "https://i.imgur.com/r1Wy1JQ.jpeg", text: "Defensa del individualismo y la razón", category: "Características" },
+            { img: "https://i.imgur.com/4nZ1dZF.jpeg", text: "Maquiavelo y su obra 'El Príncipe'", category: "Literaria y filosófica" },
             { img: "https://i.imgur.com/FGSsjyH.jpeg", text: "Erasmo de Rotterdam y el humanismo cristiano", category: "Religiosa" },
             { img: "https://i.imgur.com/ooXspTz.jpeg", text: "Copérnico y la teoría heliocéntrica", category: "Científica" },
             { img: "https://i.imgur.com/kjcEJON.jpeg", text: "Paracelso y los avances en medicina", category: "Científica" },
@@ -110,5 +110,8 @@
 
         loadGame();
     </script>
+</body>
+</html>
+
 </body>
 </html>
